# aios

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
config/: aios.toml
core/agents/: base.py  it_agent.py
core/daemon/: aiosd.py
core/routing/: router.py
core/tools/: system_tools.py
core/voice/: stt.py  tts.py  voice_interface.py
desktop/compositor/: sway.config
desktop/kde/: aios-autostart.desktop  aios-panel.desktop  aios_panel.py  kde-shortcuts.sh
desktop/panel/: waybar.config  waybar.css
installer/: install.sh
scripts/: aios  aios-voice-trigger  aios-waybar-model  aios-waybar-status
services/devops/: pipeline_agent.py
services/mldev/: ml_agent.py
services/security/: security_agent.py
